crates/macro/tests/ui/module_without_name.stderr
error: #[link(wasm_import_module = "..")] must be specified on the foreign module
 --> tests/ui/module_without_name.rs:4:1
  |
4 | / extern "C" {
5 | |     pub fn unused(ptr: *const u8, len: usize);
6 | | }
  | |_^
