crates/macro/tests/ui/module_without_name.rs
use externref_macro::externref;

#[externref]
extern "C" {
    pub fn unused(ptr: *const u8, len: usize);
}

fn main() {}
